--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             echo $version
             docker build -t adeola1592/todo-app:$version .
             echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-            docker push Adeola1592/todo-app:$version
+            docker push adeola1592/todo-app:$version
 
   Update_manifest:
     docker:
